Fix background image not properly covering in ContactScreen

--- a/src/components/screens/ContactScreen.module.scss
+++ b/src/components/screens/ContactScreen.module.scss
@@ -29,5 +29,5 @@
 	background-image: url('/src/assets/nature/texel-sky-foreground.png');
 	background-repeat: no-repeat;
 	background-position: 0 100%;
-	background-size: contain;
+	background-size: cover;
 }
